--- a/static/style.css
+++ b/static/style.css
@@ -81,3 +81,10 @@
 .main-button:hover:before {
   width: 100%;
 }
+
+.main-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 400;
+}
