--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -5,12 +5,12 @@ Criar Usuário
 {% endblock title %}
 
 {% block content %}
-<h2>Criar Usuário</h2>
 
 <form method="post">
+    <h2 class="login">Criar Usuário</h2>
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Criar</button>
+    <button type="submit" class="signup_button">Criar</button>
 </form>
 
 {% endblock content %} 
