--- a/static/style.css
+++ b/static/style.css
@@ -3,6 +3,10 @@
   font-family: 'Urbanist', sans-serif;
 }
 
+.main-logo {
+  width: 300px;
+}
+
 .main-header {
   display: flex;
   justify-content: space-between;
@@ -33,6 +37,13 @@
   align-items: center;
   font-weight: 500;
   margin-right: 1.5rem;
+}
+
+main#conteiner-principal {
+  margin: 0 100px;
+  width: 100%;
+  padding: 1rem 1rem;
+  flex-grow: 1;
 }
 
 .main-button {
@@ -81,3 +92,100 @@
 .main-button:hover:before {
   width: 100%;
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 450px;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+input[type="text"] {
+  width: 400px;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid rgb(140, 159, 164);
+  border-radius: 16px;
+  font-weight: bold;
+  background-color: rgb(206, 231, 238);
+}
+
+input[type="password"] {
+  width: 400px;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #0cf;
+  border-radius: 16px;
+  background-color: rgb(206, 231, 238);
+}
+
+form li{
+  display: none;
+}
+.helptext {
+  display: none;
+}
+
+.login_signin_button[type="submit"] {
+  background-color: #0cf;
+  color: white;
+  width: 400px;
+  padding: 8px;
+  border: 1px solid #0cf;
+  border-radius: 16px;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+.login_button{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  padding: 8px;
+  margin-bottom: 50px;
+  border-radius: 10rem;
+  background-color: #0cf;
+  color: white;
+  position:relative;
+}
+
+.signup_button[type="submit"] {
+  background-color: #0cf;
+  color: white;
+  width: 400px;
+  padding: 8px;
+  border: 1px solid #0cf;
+  border-radius: 16px;
+  cursor: pointer;
+  margin-bottom: 50px;
+}
+
+.login_button:hover,
+.signup_button[type="submit"]:hover,
+.login_signin_button[type="submit"]:hover {
+  background-color: #008fb3;
+}
+
+.login{
+  font-size: larger;
+  font-weight: bold;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
