--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 
   <body>
     <header class="main-header">
-      <a href="{% url 'index' %}"><img class="main-logo" src="{% static 'Logo-rankedeco.svg' %}" alt="Logo Rankedeco" /></a>
+      <a href="{% url 'index' %}"><img class="main-logo" src="{% static 'images/Logo-rankedeco.svg' %}" alt="Logo Rankedeco" /></a>
       <nav class="main-nav">
         <p>nn sei oq</p>
         <p>nn sei q la</p>
