Conserta imagens dos bandecos

--- a/ranking/templates/ranking/index.html
+++ b/ranking/templates/ranking/index.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-{% load static %}
 {% block title %}
   Página Inicial
 {% endblock %}
@@ -12,7 +11,7 @@
           <li>
             <a href="{% url 'detail' bandeco_data.bandeco.id %}">
               <h2>{{ bandeco_data.bandeco.name }}</h2>
-              <img src="{% static 'images/' %}{{ bandeco_data.bandeco.name|lower }}.jpeg" alt="Imagem de {{ bandeco_data.bandeco.name }}" />
+              <img src="{{ bandeco_data.bandeco.img_url }}" alt="Imagem de {{ bandeco_data.bandeco.name }}" />
             </a>
             <p>Nota: {{ bandeco_data.average_nota }}</p>
             <p>Menu: {{ bandeco_data.menu }}</p>
