--- a/ranking/templates/ranking/comment.html
+++ b/ranking/templates/ranking/comment.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
+{% block title %}Comentar{% endblock %}
 {% block content %}
 
 <div class="text-spot">
@@ -6,7 +7,7 @@
         Comentar no post {{ bandeco.titulo }} 
     </p>
     
-    <form action="{% url 'comments' bandeco.id %}" method="post">
+    <form action="{% url 'comment' bandeco.id %}" method="post">
         {% csrf_token %}
         {{ form.as_p }}
         
@@ -18,7 +19,7 @@
     </form>
 
     <p>
-        <a href="{% url 'index' %}">Voltar para a página do bandeco</a>
+        <a href="{% url 'detail' bandeco.id %}">Voltar para a página do bandeco</a>
     </p>
 </div>
 
