--- a/static/style.css
+++ b/static/style.css
@@ -35,8 +35,7 @@ main{
   margin: 1rem;
   padding: 1rem;
   border-radius: 1rem;
-  background-color: #0cf;
-  color: white;
+  color: black;
   font-size: 2rem;
   font-weight: bold;
   text-align: center;
