--- a/static/style.css
+++ b/static/style.css
@@ -39,7 +39,12 @@ main{
   font-size: 2rem;
   font-weight: bold;
   text-align: center;
-  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
+}
+
+.card img{
+  width: 30rem;
+  height: 30rem;
+  border-radius: 1rem;
 }
 
 .main-logo {
