--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <title>
       {% block title %}
 
-      {% endblock %} | Rankedeco
+      {% endblock %}| Rankedeco
     </title>
   </head>
 
@@ -24,11 +24,9 @@
     <header class="main-header">
       <a href="{% url 'index' %}"><img class="main-logo" src="{% static 'images/Logo-rankedeco.svg' %}" alt="Logo Rankedeco" /></a>
       <nav class="main-nav">
-        {% for bandeco in bandeco_list %}
-        <li> 
-          <a href="{% url 'detail' bandeco.id %}" data-text="{{bandeco.name}}">{{ bandeco.name }}</a>
-        </li>
-        {% endfor %}
+        {% block nav %}
+
+        {% endblock %}
       </nav>
       <ul class="main-login">
         {% if user.is_authenticated %}
