--- a/ranking/templates/ranking/index.html
+++ b/ranking/templates/ranking/index.html
@@ -3,6 +3,8 @@
   Página Inicial
 {% endblock %}
 {% block content %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <main>
     <h1>Página Inicial</h1>
     {% if bandeco_list %}
@@ -10,16 +12,37 @@
         {% for bandeco_data in bandeco_data %}
           <li class="card">
             <a href="{% url 'detail' bandeco_data.bandeco.id %}">
-              <h2>{{ bandeco_data.bandeco.name }}</h2>
               <img src="{{ bandeco_data.bandeco.img_url }}" alt="Imagem de {{ bandeco_data.bandeco.name }}" />
             </a>
-            <p>Nota: {{ bandeco_data.average_nota }}</p>
-            <p>Menu:</p>
-            <ul>
-              {% for item in bandeco_data.menu %}
-                <li>{{ item }}</li>
-              {% endfor %}
-            </ul>
+            <h2>{{ bandeco_data.bandeco.name }}</h2>
+            <p>{{ bandeco_data.bandeco.endereco }}</p>
+            <p>Telefone: {{ bandeco.contato }}</p>
+            <p>Horário de funcionamento: {{ bandeco.horarios }}</p>
+            {% if bandeco_data.average_nota >= 1 %}
+            <span class="fa fa-star checked"></span>
+            {% else %}
+            <span class="fa fa-star"></span>
+            {% endif %}
+            {% if bandeco_data.average_nota >= 2 %}
+            <span class="fa fa-star checked"></span>
+            {% else %}
+            <span class="fa fa-star"></span>
+            {% endif %}
+            {% if bandeco_data.average_nota >= 3 %}
+            <span class="fa fa-star checked"></span>
+            {% else %}
+            <span class="fa fa-star"></span>
+            {% endif %}
+            {% if bandeco_data.average_nota >= 4 %}
+            <span class="fa fa-star checked"></span>
+            {% else %}
+            <span class="fa fa-star"></span>
+            {% endif %}
+            {% if bandeco_data.average_nota >= 4.7 %}
+            <span class="fa fa-star checked"></span>
+            {% else %}
+            <span class="fa fa-star"></span>
+            {% endif %}
           </li>
 
         {% endfor %}
