--- a/ranking/templates/ranking/detail.html
+++ b/ranking/templates/ranking/detail.html
@@ -36,8 +36,13 @@
               <figcaption>
                 <strong>{{ comentario.author }}</strong> ({{ comentario.date|date:'d/m/Y' }})
                 <strong>{{ comentario.nota }}</strong>
+                <button type="button" onclick="confirmDelete('{{ comentario.id }}')">Delete Comment</button>
               </figcaption>
               <blockquote>"{{ comentario.text }}"</blockquote>
+              <form method="post" action="{% url 'detail' pk=bandeco.pk %}" class="delete-comment-form-{{ comentario.id }}">
+                {% csrf_token %}
+                <input type="hidden" name="delete_comment_id" value="{{ comentario.id }}">
+              </form>
             </figure>
           {% endfor %}
         {% else %}
@@ -46,4 +51,14 @@
       </ul>
     </section>
   </main>
+
+  <script>
+    function confirmDelete(commentId) {
+      var result = confirm("Are you sure you want to delete this comment?");
+      if (result) {
+        var form = document.querySelector('.delete-comment-form-' + commentId);
+        form.submit();
+      }
+    }
+  </script>
 {% endblock %}
