Finaliza alterações no seção de comentários

--- a/ranking/templates/ranking/comment_update.html
+++ b/ranking/templates/ranking/comment_update.html
@@ -9,7 +9,7 @@
       {% csrf_token %}
       {{ form.as_p }}
       <a href="{% url 'detail' bandeco.id %} ">Cancelar</a>
-      <button type="submit">Postar Comentário</button>
+      <button type="submit">Editar Comentário</button>
     </form>
   </main>
 {% endblock %}
