--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,30 +1,28 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Login
-{% endblock title %}
+  Login
+{% endblock %}
 
 {% block content %}
-
-<form method="post" action="{% url 'login' %}">
+  <form method="post" action="{% url 'login' %}">
     <h1 class="login_h1">Login de Usuário</h1>
     {% csrf_token %}
-    {{ form.as_p}}
+    {{ form.as_p }}
     <button type="submit" value="login" class="login_signin_button">Entrar</button>
-    <input type="hidden" name="next" value="{{ next }}">
+    <input type="hidden" name="next" value="{{ next }}" />
     <p class="login">Não possui usuário?</p>
     <a class="login_button" href="{% url 'signup' %}">Cadastre-se</a>
     {% if form.errors %}
-    <p class="login">Sua senha e nome de usuário não correspondem. Tente novamente.</p>
+      <p class="login">Sua senha e nome de usuário não correspondem. Tente novamente.</p>
     {% endif %}
 
     {% if next %}
-    {% if user.is_authenticated %}
-    <p class="login">Sua conta não possui acesso a esta página. Para prosseguir, faça um login com uma conta que tenha.</p>
-    {% else %}
-    <p class="login">Faça o login para ver esta página.</p>
+      {% if user.is_authenticated %}
+        <p class="login">Sua conta não possui acesso a esta página. Para prosseguir, faça um login com uma conta que tenha.</p>
+      {% else %}
+        <p class="login">Faça o login para ver esta página.</p>
+      {% endif %}
     {% endif %}
-    {% endif %}
-    
-    {% endblock %}
-</form>
+  </form>
+{% endblock %}
