--- a/ranking/templates/ranking/index.html
+++ b/ranking/templates/ranking/index.html
@@ -10,45 +10,41 @@
   {% endfor %}
 {% endblock %}
 {% block content %}
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
   <main>
     <h1>Página Inicial</h1>
     {% if bandeco_list %}
       <ul class="bandeco_card">
         {% for bandeco_data in bandeco_data %}
           <li class="card">
-            <a href="{% url 'detail' bandeco_data.bandeco.id %}">
-              <img src="{{ bandeco_data.bandeco.img_url }}" alt="Imagem de {{ bandeco_data.bandeco.name }}" />
-            </a>
+            <a href="{% url 'detail' bandeco_data.bandeco.id %}"><img src="{{ bandeco_data.bandeco.img_url }}" alt="Imagem de {{ bandeco_data.bandeco.name }}" /></a>
             <h2>{{ bandeco_data.bandeco.name }}</h2>
             <p>{{ bandeco_data.bandeco.endereco }}</p>
             <p>Telefone: {{ bandeco.contato }}</p>
             <p>Horário de funcionamento: {{ bandeco.horarios }}</p>
-            {% if bandeco_data.average_nota >= 1 %}
-            <span class="fa fa-star checked"></span>
+            {% if bandeco_data.average_nota >= 0.5 %}
+              <span class="fa fa-star checked"></span>
             {% else %}
-            <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
             {% endif %}
-            {% if bandeco_data.average_nota >= 2 %}
-            <span class="fa fa-star checked"></span>
+            {% if bandeco_data.average_nota >= 1.5 %}
+              <span class="fa fa-star checked"></span>
             {% else %}
-            <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
             {% endif %}
-            {% if bandeco_data.average_nota >= 3 %}
-            <span class="fa fa-star checked"></span>
+            {% if bandeco_data.average_nota >= 2.5 %}
+              <span class="fa fa-star checked"></span>
             {% else %}
-            <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
             {% endif %}
-            {% if bandeco_data.average_nota >= 4 %}
-            <span class="fa fa-star checked"></span>
+            {% if bandeco_data.average_nota >= 3.5 %}
+              <span class="fa fa-star checked"></span>
             {% else %}
-            <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
             {% endif %}
-            {% if bandeco_data.average_nota >= 4.7 %}
-            <span class="fa fa-star checked"></span>
+            {% if bandeco_data.average_nota >= 4.5 %}
+              <span class="fa fa-star checked"></span>
             {% else %}
-            <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
             {% endif %}
           </li>
         {% endfor %}
