--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,9 @@
 
       {% endblock %}| Rankedeco
     </title>
+
+      <!-- Favicon -->
+      <link rel="shortcut icon" href="{% static 'images/rankedeco-icon.ico' %}" type="image/x-icon">
   </head>
 
   <body>
