--- a/ranking/templates/ranking/index.html
+++ b/ranking/templates/ranking/index.html
@@ -21,7 +21,7 @@
             <p>{{ bandeco_data.bandeco.endereco }}</p>
             <p>Telefone: {{ bandeco.contato }}</p>
             <p>Horário de funcionamento: {{ bandeco.horarios }}</p>
-            {% if bandeco_data.average_nota >= 0.5 %}
+            <div class="stars_score">{% if bandeco_data.average_nota >= 0.5 %}
               <span class="fa fa-star checked"></span>
             {% else %}
               <span class="fa fa-star"></span>
@@ -45,7 +45,8 @@
               <span class="fa fa-star checked"></span>
             {% else %}
               <span class="fa fa-star"></span>
-            {% endif %}
+            {% endif %}</div>
+            
           </li>
         {% endfor %}
       </ul>
