--- a/static/style.css
+++ b/static/style.css
@@ -32,7 +32,7 @@ main{
   margin-top: 3rem;
 }
 
-.card{
+.card {
   display: block;
   flex-direction: column;
   justify-content: center;
@@ -59,6 +59,11 @@ main{
   height: 27rem;
   border-radius: 1rem;
   margin: auto;
+  transition: transform 0.3s; /* Adicione uma transição suave para o efeito de zoom */
+}
+
+.card img:hover {
+  transform: scale(1.05); /* Ajuste o valor de escala conforme necessário para o efeito desejado */
 }
 
 .main-logo {
