🚧 Muda o design do site

--- a/static/style.css
+++ b/static/style.css
@@ -26,25 +26,28 @@ main{
   flex-grow: 1;
 }
 
-.bandeco_card {
+.bandecos-card {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
   margin-top: 3rem;
+  align-items: center;
 }
 
 .card {
-  display: block;
-  flex-direction: column;
-  justify-content: center;
-  align-items:center;
-  width: 27rem;
-  height: 55rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  width: 80%;
+  height: auto;
   margin: auto;
   border-radius: 1rem;
   color: black;
   font-size: 1.5rem;
   font-weight: lighter;
   text-align: justify;
+  margin: 1rem;
 }
 
 .card h2{
@@ -54,12 +57,24 @@ main{
   text-align: left;
 }
 
-.card img{
+.card img {
   width: 27rem;
   height: 27rem;
   border-radius: 1rem;
   margin: auto;
   transition: transform 0.3s; /* Adicione uma transição suave para o efeito de zoom */
+  max-width: 100%; /* Garante que a imagem não ultrapasse a largura do contêiner */
+  order: -1;
+}
+
+.card .bandeco-info {
+  order: 1;
+  margin: 1rem;
+}
+
+.card .menu-info {
+  order: 2;
+  margin: 1rem;
 }
 
 .card img:hover {
