correção dinner_nota

--- a/ranking/templates/ranking/detail.html
+++ b/ranking/templates/ranking/detail.html
@@ -84,27 +84,27 @@
           <div>
             <p>
               Menu jantar: 
-              {% if comentario.nota >= 0.5 %}
+              {% if bandeco_data.dinner_nota >= 0.5 %}
                 <span class="fa fa-star checked"></span>
               {% else %}
                 <span class="fa fa-star"></span>
               {% endif %}
-              {% if comentario.nota >= 1.5 %}
+              {% if comentario.dinner_nota >= 1.5 %}
                 <span class="fa fa-star checked"></span>
               {% else %}
                 <span class="fa fa-star"></span>
               {% endif %}
-              {% if comentario.nota >= 2.5 %}
+              {% if comentario.dinner_nota >= 2.5 %}
                 <span class="fa fa-star checked"></span>
               {% else %}
                 <span class="fa fa-star"></span>
               {% endif %}
-              {% if comentario.nota >= 3.5 %}
+              {% if comentario.dinner_nota >= 3.5 %}
                 <span class="fa fa-star checked"></span>
               {% else %}
                 <span class="fa fa-star"></span>
               {% endif %}
-              {% if comentario.nota >= 4.5 %}
+              {% if comentario.dinner_nota >= 4.5 %}
                 <span class="fa fa-star checked"></span>
               {% else %}
                 <span class="fa fa-star"></span>
